# cpp

./: .gitignore  README.md  index.html  version.txt
.github/workflows/: codeql-analysis.yml
jacc/: CMakeLists.txt  Jacc.ide  bison.simple  c-parse.j  grammar.cpp  grammar.h  jacc.cpp  jacc.h  jacc.tmpl  jacc.y  jacc_clos.cpp  jacc_clos.h  jacc_glue.cpp  jacc_glue.h  jacc_jamp.cpp  jacc_jamp.h  jacc_lexer.cpp  jacc_lexer.h  jacc_props.h  jacc_render_opts.h  jacc_spacer.cpp  jacc_spacer.h  jacc_symtype.cpp  jacc_symtype.h  jacc_tab.c  jacc_tab.h  lalr.cpp  lalr.h  lalr_print.cpp  lalr_print.h  lalr_read.cpp  lalr_read.h  lrmain.cpp  prio.h  setlocale.cpp  template_instances.cpp
jacc/examples/: BitSet.java  CMakeLists.txt  ab.j  ab_main.cpp  ab_parser.cpp  ab_parser.h  ab_sym.h  calc.j  calc.out  calc_main.cpp  calc_parser.cpp  calc_parser.h  calc_sym.h  java12.j  java12.lex  java12_lex.cpp  java12_parser.cpp  java12_parser.h  java12_sym.h  walls.txt
jacc/html/: intro.html  jacc.html  preface.html
jacc/java_runtime/: generic_stack.h  generic_stack.java  lr_parser.java  lr_symbol.java  scanner.java
jacc/msvc/: Jacc.dsw  readme.txt
jacc/msvc/Calc/: Calc.dsp
jacc/msvc/Jacc/: Jacc.dsp
jacc/msvc/Java12/: Java12.dsp
jacc/rtf/: jacc.rtf
jacc/runtime/: generic_stack.h  lr_parser.cpp  lr_parser.h  lr_symbol.h  scanner.h
jacc/www/html/: index.html  intro.html  preface.html
obsolete/inc/parser/: DEBUG.H  ERROR.H  LEX.H  LINCOL.H  LONG.H  SOURCE.H  STRUCTS.H  SYMTABLE.H  SYN.H  TT.H
obsolete/inc/pg/: FA.h  FAintern.h  FAprint.h  FAtransf.h  Grammar.h  LALR.h  LR1.h  RE.h  REread.h  predefs.h
obsolete/inc/util/: ASSERT.H  BitSet.h  DEBUG.H  SEQUENCE.H  SETOPER.H  SORTVEC.H  SORTVECT.H  STRING.H  VECTOR.H  VECTORT.H  WSTRING.H
obsolete/src/parser/: ERROR.CPP  EXPREAD.CPP  EXPREAD1.CPP  LEX.CPP  MAIN.CPP  MODULE.CPP  PRINTEXP.CPP  PRINTSTM.CPP  SOURCE.CPP  STMREAD.CPP  SYMTABLE.CPP  SYN.CPP
obsolete/src/pg/: FA.cpp  FAmain.cpp  FAprint.cpp  Grammar.cpp  LALR.cpp  LR1.cpp  LRmain.cpp  Lr_histo.txt  REread.CPP  re.cpp
obsolete/src/util/: ASSERT.CPP  SEQUENCE.CPP
scang/: FA.cpp  FA.h  FAintern.h  FAmain.cpp  FAprint.cpp  FAprint.h  RE.cpp  RE.h  REread.cpp  REread.h  chain.h  chain_test.cpp  gen_matcher.cpp  gen_scanner.cpp  groups.cpp  help_tool.cpp  predefs.h  scan_buffer.cpp  scan_buffer.h  scan_streambuf.cpp  scang.cpp  setoperat.h  tgroups.cpp  tgroups.h
scang/examples/: mon.re  mon1.re  mon2.re
scang/exe/: scanner.cpp
util/: alloc.h  allocat.h  array.h  assert.h  avl_tree.h  callocat.h  debug.h  diag.h  dirent.h  hashtab.h  hugeInt.h  lexer.h  lexersrc.h  lincol.h  list.h  listt.h  minmax.h  msg_listener.h  progress.h  rcmap_by_rid.h  rcmap_by_rid_builder.h  rcmap_by_str.h  rcmap_by_str_builder.h  sequence.h  set.h  setoper.h  shared_rep.h  sortvec.h  sortvect.h  string.h  string_array.h  types.h  utility.h  vector.h  vectort.h
util/doc/: vector.html
util/math/: matrix.h  vector.h
util/src/: AVL-Diagrams.txt  allocat.cpp  assert.cpp  avl_tree.cpp  bitset.cpp  diag.cpp  hugeint.cpp  lexer.cpp  sequence.cpp  string.cpp  wstring.cpp
util/test/: avl_test.cpp  exp.cpp  seqtest.cpp
wees/: typelist-template-example.cxx
wees/allocat/: allocat.cpp  allocat.ide  diag.h  lock.h  sync.cpp  sync.h  test.cpp
wees/cape_rt/: annotation.cpp  annotation.h  array.h  errnote.cpp  errnote.h  execenv.cpp  execenv.h  pattern.cpp  pattern.h
wees/jt_aux/: Jt.ide  java+log.c  jtc.c
wees/memtest/: ATH1200.txt  PIII533.txt  XP1400.txt  main.c  memfuncs.c  memfuncs.h  memtest.bat
wees/smartop/: CMakeLists.txt  OPER  initterm.cpp  initterm.h  jp.cpp  parsetre.cpp  parsetre.h  profile.cpp  readterm.cpp  smartop.cpp  smartop.h
wees/solvpoly/: main.cpp  solvpoly.cpp  solvpoly.h  sp.ide
